methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:23: error: expected start of definition
override def run {
         ^PictureMono2:31: error: Unmatched closing brace '}' ignored here
}
^